<resources>
    <string name="app_name">GodOfRowing</string>
    <string name="defaut">ParameterName</string>
    <string name="def_parameter_name">Accel</string>
    <string name="def_parameter_value">ParamValue</string>
    <string name="sad">123123</string>
    <string name="def_parameter_name2">Map</string>
    <string name="def_parameter_name3">3-axis\nAceelerometer</string>
    <string name="def_parameter_name4">Linear\nAccel</string>
    <string name="def_parameter_name5">Balance</string>
    <string name="def_parameter_name6"></string>
    <string name="title_activity_map">Map</string>
    <string name="action_settings">Settings</string>
    <string name="notFinished">commingSoon</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication error, Please enter a valid email and password or sign up</string>
    <string name="hint_email">Email*</string>
    <string name="hint_password">Password*</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already registered. Login !!</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_sign_up">Sign Up !!</string>
    <string name="err_msg_email">Enter a valid email.</string>
    <string name="err_msg_required">Required !!</string>
    <string name="err_msg_password">Enter a valid password with min 6 characters.</string>
    <string name="btn_link_to_signin">Don\'t have an account, SignIn !!</string>
    <string name="hint_username">Username</string>
    <string name="str_link_to_forgot_pass">Forgot Password</string>
    <string name="login_anonymous">Anonymous:</string>
    <string name="login_remember_me">Remember me:</string>
    <string name="enter_total_meters">Enter Total Meters</string>
    <string name="hint_age">Age</string>
    <string name="logo">logo</string>
    <string name="param_meters_text">meters</string>
    <string name="param_spm_def_text">0 \nSPM</string>
    <string name="param_def_speed_per500">0:00\nper 500m</string>
    <string name="param_def_ave_speed_per500">0 min\nper 500m</string>
    <string name="param_def_speed_msec">0:0\nave Speed</string>
    <string name="param_def_ave_spm">0\nave SPM</string>
    <string name="title_activity_analysis_navigation">AnalysisNavigationActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="zero_timer">0:00:0</string>
    <string name="zero">0</string>
    <string name="nm_per_sec">0.0 m per sec</string>
    <string name="start_activity">Start Activity</string>
    <string name="stop_activity">Stop</string>
    <string name="action_signout">SignOut</string>
</resources>